--- a/project21.html
+++ b/project21.html
@@ -10,5 +10,6 @@
     <h1>Boka</h1>
     <title>this is first page of html</title>
     <aside>this is sidebar</aside>
+    <footer>this is footer</footer>
   </body>
 </html>
