--- a/project21.html
+++ b/project21.html
@@ -7,15 +7,58 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Boka</h1>
-    <title>this is first page of html</title>
-    <aside>this is sidebar</aside>
-    <footer>this is footer</footer>
-    <h2></h2>
-    <h3></h3>
-    <h4></h4>
-    <h5></h5>
-    <h6></h6>
-    <main></main>
-  </body>
+ <section class="navbar-section">
+      <nav class="navbar">
+        <div class="logo"><h1>sneakers</h1></div>
+        <ul class="nav-links">
+          <li><a href="#">Collections</a></li>
+          <li><a href="#">Men</a></li>
+          <li><a href="#">Women</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <div class="icons">
+          <i class="fa-solid fa-cart-shopping"></i>
+          <img src="img right.png" />
+        </div>
+      </nav>
+    </section>
+    <div class="content">
+      <div class="image-section">
+        <img class="main-image" src="main-img.jpg" />
+        <div class="sale">S A L E</div>
+        <div class="footer-img">
+          <img src="image-product-1-thumbnail.jpg" />
+          <img src="image-product-2-thumbnail.jpg" />
+          <img src="image-product-3-thumbnail.jpg" />
+          <img src="image-product-4-thumbnail.jpg" />
+        </div>
+      </div>
+
+      <div class="product-info">
+        <span class="company-name">SNEAKER COMPANY</span>
+        <div class="hot-price">H<br />O<br />T</div>
+        <h1>Fall Limited Edition Sneakers</h1>
+        <p class="description">
+          These low-profile sneakers are your perfect casual wear companion.
+          Featuring a durable rubber outer sole, they will withstand everything
+          the weather can throw at them.
+        </p>
+        <footer>
+          <div class="price">
+            <span class="new-price">$125.00</span>
+            <span class="discount">50%</span>
+            <span class="old-price"><del>$250.00</del></span>
+          </div>
+          <div class="payment">
+            <div class="quantity-button">
+              <button class="minus">-</button>
+              <span class="number">1</span>
+              <button class="plus">+</button>
+            </div>
+            <button class="add-to-cart">Add to cart</button>
+          </div>
+        </footer>
+      </div>
+    </div>
 </html>
