--- a/project21.html
+++ b/project21.html
@@ -7,58 +7,38 @@
     <title>Document</title>
   </head>
   <body>
- <section class="navbar-section">
-      <nav class="navbar">
-        <div class="logo"><h1>sneakers</h1></div>
-        <ul class="nav-links">
-          <li><a href="#">Collections</a></li>
-          <li><a href="#">Men</a></li>
-          <li><a href="#">Women</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-        <div class="icons">
-          <i class="fa-solid fa-cart-shopping"></i>
-          <img src="img right.png" />
-        </div>
-      </nav>
-    </section>
-    <div class="content">
-      <div class="image-section">
-        <img class="main-image" src="main-img.jpg" />
-        <div class="sale">S A L E</div>
-        <div class="footer-img">
-          <img src="image-product-1-thumbnail.jpg" />
-          <img src="image-product-2-thumbnail.jpg" />
-          <img src="image-product-3-thumbnail.jpg" />
-          <img src="image-product-4-thumbnail.jpg" />
-        </div>
-      </div>
+    <div class="container">
+      <img src="illustration-hero.svg" class="logo-image" />
+      <div class="description">
+        <h1>Order Summary</h1>
 
-      <div class="product-info">
-        <span class="company-name">SNEAKER COMPANY</span>
-        <div class="hot-price">H<br />O<br />T</div>
-        <h1>Fall Limited Edition Sneakers</h1>
-        <p class="description">
-          These low-profile sneakers are your perfect casual wear companion.
-          Featuring a durable rubber outer sole, they will withstand everything
-          the weather can throw at them.
+        <p>
+          You can now listen to millions of songs, <br />
+          audiobooks, and podcaasts on any device<br />
+          anywhere you like!
         </p>
-        <footer>
-          <div class="price">
-            <span class="new-price">$125.00</span>
-            <span class="discount">50%</span>
-            <span class="old-price"><del>$250.00</del></span>
-          </div>
-          <div class="payment">
-            <div class="quantity-button">
-              <button class="minus">-</button>
-              <span class="number">1</span>
-              <button class="plus">+</button>
-            </div>
-            <button class="add-to-cart">Add to cart</button>
-          </div>
-        </footer>
       </div>
+      <div class="price-box">
+        <div class="price">
+          <img src="icon-music.svg" />
+          <h3 class="payplan">
+            Annual Plan <br />
+            <div class="dollar">&dollar;59.99/year</div>
+          </h3>
+        </div>
+        <div class="change-button">
+          <a href="#">Change</a>
+        </div>
+      </div>
+      <button class="submit">Proceed to Payment</button>
+      <button class="cancel">Cencel Order</button>
     </div>
+    <div class="footer">
+      <p>
+        Challenge by <a href="#">Frontend Mentor</a> <br />
+        Coded by
+        <a href="#">David Lazic</a>
+      </p>
+    </div>
+  </body>
 </html>
