--- a/project21.html
+++ b/project21.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="project21.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>main titel</title>
   </head>
   <body>
     <div class="container">
